2015-01-08  Charlie Zender  <zender@uci.edu>

	* New ncecat regression test to verify concatentated coordinates do not gain new record dimension

	* Implement temporary fix for autoconf issues

	* Discovered that NCO autotools do not follow autoconf guidelines
	This only matters in practice for ncap2 which uses multiple additional libraries
	Incorrect usage of CPPFLAGS and friends can lead to wrong precedence in ncap2 linking
	Will be hard to fix correctly---thorough rewrite of configure.ac *.am required

2015-01-07  Charlie Zender  <zender@uci.edu>

	* Add autobld/compile: Wrapper for compilers which do not understand '-c -o'. Required by autoconf/configure on FC21.

	* NCO_CHECK_FUNCS() for nc_rename_grp() and nc_inq_format() in configure
 	Oversight---configure builds have only used stub versions of these functions so far!

2014-12-30  Charlie Zender  <zender@uci.edu>

	* Change copyright year to 2015 and tweak LICENSE from "can" to "may"

	* Introduce stubs to print calendar "time since"dates in more human-readable format

2014-12-18  Charlie Zender  <zender@uci.edu>

	* Impose nco_*() namespace convention on var_scv_*() and scv_var_*() routines

2014-12-08  Charlie Zender  <zender@uci.edu>

	* --lsd ready-to-go except needs per-variable option and needs to avoid coordinates

	* Add nco_var_around() to enhance zlib compression by making it	lossy up to specified precision

2014-12-08  Henry Butowsky  <henryb@hush.com>

	* defdim() now accepts an additional optional arg UNLIMITED or LIMITED

2014-12-01  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.8 release procedure:
 	Changes since nco-4_4_7: -A warn,
	cd ~/nco;cvs tag -d nco-4_4_8;cvs tag -d nco-4_4_8-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.8 release"
	cvs tag -c nco-4_4_8;cvs tag -c nco-4_4_8-1

	* Warn when appended output type differs from input type (legal	yet sketchy with -A)

2014-11-26  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.7 release procedure: